# coa_script_extender

./: .gitignore  CMakeLists.txt  LUA_OFFSETS.md  MODDING_GUIDE.md  README.md  build.sh  coa_ai_extended_hooks.txt  coa_ai_functions.txt  coa_ai_master_functions.txt  coa_ai_master_hooks.txt  coa_function_map.txt  coa_new_targets.txt  coa_structure_offsets.txt  coa_structures.h  lua_functions_found.txt  toolchain-mingw64.cmake
analysis/ai/: coa_ai_extended.txt  coa_ai_hook_points.txt  consolidate_ai_maps.py
analysis/misc/: coa_function_map_expanded.txt  coa_gameworld_candidates.txt  coa_script_extender_api.txt  coa_string_hunting.txt  coa_xref_analysis.txt  coa_xref_hooks.h
analysis/structures/: coa_structure_analysis.txt  coa_structures_refined.h  coa_vtables.h  coa_vtables.txt
ghidra_scripts/: AIBehaviorHunter2.java  AnalyzeCrashLocation.java  AnalyzeLuaInitCaller.java  AnalyzeLuaLSetfuncs.java  CrossReferenceAnalyzer.java  ExtractRealLuaAPI.java  FindAllLuaFunctions.java  FindGEMCommandRegistry.java  FindImportedDLLs.java  FindLuaAPIs.java  FindLuaCall.java  FindLuaCreateTable.java  FindLuaExecute.java  FindLuaFunctions.java  FindLuaInitialization.java  FindLuaSetGlobal.java  FindLuaSetGlobalReal.java  FindRealLuaAPI.java  FindRemainingLuaFunctions.java  GameWorldFinder.java  GenerateLuaSignatures.java  StructureVerifier.java  VTableHunter.java  VerifyLuaFunctions.java
mods/: example_mod.cpp
proxy/: version_proxy.cpp
sdk/: coa_api.cpp  coa_api.h  coa_globals.h  coa_hooks.h  coa_loader.cpp  coa_lua_bridge.cpp  coa_lua_bridge.h  coa_overlay.cpp  coa_overlay.h  coa_plugin_api.cpp  coa_plugin_api.h  coa_plugin_api_internal.h  coa_sdk.h  coa_vtables.h
test_scripts/: test_extender.lua
